# elsa

./: .dockerignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2ff9afdda58d_add_level_to_activities.py  8d0a0d35d01b_init_schema.py
data/: test_data.json
scripts/: seed_db.py
src/: app_factory.py  main.py  models.py  schemas.py
src/api/routes/: health.py  organizations.py
src/core/: config.py  database.py  env.py  exception_handlers.py  security.py
tests/: conftest.py  test_organizations_api.py  test_security.py
