[project]
name = "elsa"
version = "0.1.0"
description = "MVP: Reference Book"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "geoalchemy2>=0.18.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[tool.ruff]
target-version = "py314"
line-length = 90
indent-width = 4
src = ["src", "alembic", "scripts", "tests"]

[tool.ruff.lint]
preview = true
select = [
    "UP",
    "I",
    "E",
    "W",
    "F",
    "B",
    "C4",
    "S",
    "BLE",
    "T20",
    "T10",
    "PT",
    "RUF",
    "DTZ",
    "ERA",
    "FURB",
]
ignore = [
    "C408",
    "RUF001",
    "RUF002",
    "RUF003",
    "S110",
    "BLE001",
]
exclude = [

]
fixable = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"alembic/versions/*.py" = ["UP035", "UP007", "I001", "E501"]
